Remove intermediate map from master task execution
Today the `MasterService` passes a batch of tasks the the relevant
executor and expects it to construct a map containing the result of each
task. In practice every executor starts by constructing the same map
builder, which is a doubly-nested inner class and therefore pretty
awkward to find without just copying another executor. When the executor
returns the `MasterService` then iterates through all the tasks, looking
each one up in the map, and copying all the successful ones to a new
list. This is kind of wasteful.

This commit changes the executor interface to accept a list of
tasks-in-context, such that the context of each task includes callbacks
that the executor can use to record the success or failure of the
corresponding task. This simplifies the implementation of each executor
and avoids the need for the `MasterService` to do all those map lookups
and to check for inconsistencies in the returned map.